# riscv-playground

./: .gitignore  Cargo.toml
.cargo/: config
src/: main.rs
tools/: jlink.sh
