[package]
name = "riscv-playground"
version = "0.0.0"
authors = ["Dmitry Tantsur <dtantsur@protonmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"

[dependencies]
bme280 = { git = "https://github.com/dtantsur/bme280-rs", branch = "borrow_delay" }
embedded-hal = "0.2.3"
heapless = "0.6.0"
hifive1 = { version = "0.9.0", features = ["board-hifive1-revb"] }
panic-halt = "0.2.0"
riscv = "0.6.0"
riscv-rt = "0.8.0"
shared-bus = "0.2.0"
ssd1306 = "0.5.1"

[[bin]]
name = "riscv-playground"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
